# acmbot

./: .cspell.json  .env.dev  .env.prod  .gitignore  .pdm-python  README.md  package.json  pnpm-lock.yaml  pyproject.toml
src/plugins/nonebot_plugin_swpuacm/: __init__.py  commands.py  constant.py
src/plugins/nonebot_plugin_swpuacm/res/: QAList.toml  settings.toml
